<resources>
    <string name="app_name">unser_hoersaal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment_forgot_password">Passwort vergessen</string>
    <string name="login_fragment_login_button_string">Einloggen</string>
    <string name="login_fragment_checkbox_string">Eingeloggt bleiben</string>
    <string name="login_fragment_password_hint">Passwort</string>
    <string name="login_fragment_user_email_hint">Email</string>
    <string name="login_fragment_registration_string">Registrieren</string>
    <string name="login_fragment_no_account">Noch kein Account?</string>
    <string name="login_fragment_login_failure">Eingegebene Email oder Passwort ist falsch</string>
    <string name="login_fragment_title_string">Login</string>
    <string name="registration_fragment_password_hint">Passwort</string>
    <string name="registration_fragment_repeat_password_hint">Passwort wiederholen</string>
    <string name="registration_fragment_user_email_hint">Email</string>
    <string name="registration_fragment_title">Registration</string>
    <string name="registration_fragment_checkbox_string">Eingeloggt bleiben</string>
    <string name="registration_fragment_registration_fail_string">Registrierung fehlgeschlagen</string>
    <string name="registration_fragment_registrate_button_string">Account erstellen</string>
    <string name="enter_course_string">Kurs suchen</string>
    <string name="enter_course_caption">Bestehendem Kurs beitreten, um Fragen zu stellen, Antworten zu senden, etc.</string>
    <string name="create_course_string">Kurs erstellen</string>
    <string name="create_course_caption">Kurs, dem andere Nutzer über einen generierten Code beitreten können, erstellen</string>
    <string name="enter_course_fragment_edit_text">Kurs-Code eingeben</string>
    <string name="enter_course_fragment_button_string">Kurs suchen</string>
    <string name="create_course_fragment_caption_string">Hier kannst du ganz einfach einen Kurs erstellen, dem über die generierte Nummer beigetreten werden kann</string>
    <string name="create_course_generate_number">Nummer generieren</string>
    <string name="create_course_create_button">Erstellen</string>
    <string name="create_course_fragment_title_hint">Kurstitel</string>
    <string name="current_course_edit_text_hint">Nachricht</string>
    <string name="current_course_textview_enter_number">Beitrittsnummer: </string>
    <string name="login_fragment_user_name_hint">Email</string>
    <string name="profile_fragment_title_string">Profil</string>
    <string name="profile_fragment_email_title">Email</string>
    <string name="profile_fragment_example_email">App@Musterapp.de</string>
    <string name="profile_fragment_password_title">Passwort</string>
    <string name="profile_fragment_example_password">1234abcDEF</string>
    <string name="profile_fragment_edit_profile_button_string">Profil bearbeiten</string>
    <string name="profile_fragment_logout_button_string">Ausloggen</string>
    <string name="bottom_navigation_menu_profile_string">Profil</string>
    <string name="bottom_navigation_menu_courses_string">Kurse</string>
    <string name="bottom_navigation_menu_create_string">Erstellen</string>
    <string name="courses_fragment_title_string">Meine Kurse</string>
    <string name="courses_fragment_enter_new_course_button_string">Neuem Kurs beitreten</string>
    <string name="courses_fragment_create_new_course_button_string">Neuen Kurs erstellen</string>
    <string name="placeholder_fragment_string">Hier wird gerade an einem neuen Feature gearbeitet</string>
    <string name="bottom_navigation_menu_placeholder_string">Platzhalter</string>
    <string name="registration_fragment_account_available_string">Account vorhanden?</string>
    <string name="registration_fragment_login_string">Einloggen</string>
    <string name="courses_fragment_live_tab_string">Heute</string>
    <string name="courses_fragment_all_tab_string">Alle</string>
    <string name="courses_fragment_created_tab_string">Erstellt</string>
    <string name="toolbar_search_string">Suchen</string>
    <string name="courses_search_string">Suche hier nach Kursen…</string>
    <string name="threads_search_string">Fragen durchsuchen…</string>
    <string name="toolbar_filter_string">Filter</string>
    <string name="toolbar_profile_string">Profil</string>
    <string name="toolbar_logout_string">Logout</string>
    <string name="profile_fragment_institution_string">Hochschule</string>
    <string name="profile_fragment_name_string">Nutzername</string>
    <string name="profile_fragment_toolbar_logout_string">Ausloggen</string>
    <string name="edit_profile_fragment_user_name">Nutzername</string>
    <string name="edit_profile_fragment_institution">Hochschule</string>
    <string name="edit_profile_fragment_current_password">Aktuelles Passwort</string>
    <string name="edit_profile_fragment_new_password">Neues Passwort</string>
    <string name="edit_profile_toolbar_save">Speichern</string>
    <string name="edit_profile_save_changes">Änderungen speichern</string>
    <string name="enter_course_fragment_or_string">Oder</string>
    <string name="enter_course_fragment_enter_via_qr_code">Via Qr-Code beitreten</string>
    <string name="enter_course_fragment_course_titel">Kurstitel</string>
    <string name="enter_course_fragment_course_creator">Kursersteller</string>
    <string name="enter_course_fragment_course_institution">Hochschule</string>
    <string name="enter_course_fragment_course_description">Dieser Kurs richtet sich an Masterstudierende der Medieninformatik an der Universität Regensburg. Es werden Inhalte aus dem Software-Engineering vermittelt.</string>
    <string name="enter_course_fragment_enter_button_string">Beitreten</string>
    <string name="create_course_fragment_course_description">Kursbeschreibung</string>
    <string name="create_course_fragment_course_institution">Hochschule</string>
    <string name="thread_item_likes_string">Likes</string>
    <string name="thread_item_replies_string">Antworten</string>
    <string name="thread_item_example_question">Dies ist eine beispielhafte Frage</string>
    <string name="thread_item_example_question_description">Dies ist eine beispielhafte, ausformulierte Fragestellung für ein Thread-Item. Sie ist idealerweise in der Zeichenanzahl begrenzt, da das Item sonst zu lange wird. Noch mehr Text um zu sehen wie sich das Textfeld dann verhält. Bricht es von selbst ab? Oder funktioniert danach wieder irgendetwas nicht mehr richtig?</string>
    <string name="thread_item_example_date">17:54</string>
    <string name="thread_item_example_author">Susanne Baum</string>
    <string name="answer_item_example_time">18:45</string>
    <string name="answer_item_example_author">David Peng</string>
    <string name="answer_item_example_answer">Dies ist eine beispielhafte Antwort, die zeigen soll, wie sich das Textfeld bei einer längeren Antwort verhält. Funktioniert der Zeilenumbruch richtig, schaut alles geordnet aus und so weiter und so fort.</string>
    <string name="answer_item_like_example">35</string>
    <string name="answer_item_dislike_example">2</string>
    <string name="course_description_fragment_creator">Ersteller:in</string>
    <string name="course_description_fragment_description_textview">Beschreibung</string>
    <string name="course_description_example_institution">Universität Regensburg</string>
    <string name="course_description_fragment_example_description">Dieser Kurs richtet sich an Master-Studierende der Universität Regensburg. Es sollen viele interessante Inhalte vermittelt werden.</string>
    <string name="course_description_fragment_participants_textview">Teilnehmer:innen</string>
    <string name="course_description_course_example_title">Kurstitel</string>
    <string name="course_description_unsubscribe_from_course">Von Kurs abmelden</string>
    <string name="participant_list_item_example_name">Beispielname1234</string>
    <string name="profile_fragment_delete_account">Account löschen</string>
    <string name="profile_fragment_example_institution">Universität Regensburg</string>
    <string name="course_meeting_fragment_contributions_example">2</string>
    <string name="course_meeting_fragment_contributions_string">Beiträge</string>
    <string name="course_meeting_general_thread_heading"><![CDATA[Ankündigungen & Allgemeines]]></string>
    <string name="create_thread_send_message">Frage Senden</string>
    <string name="create_thread_title">Erstellen</string>
    <string name="create_thread_screen_question_title_hing">Frage-Titel</string>
    <string name="create_thread_screen_question_text_hint">Frage-Text</string>
    <string name="enter_course_dialog_decline">Abbrechen</string>
    <string name="course_history_create_meeting_title">Termin erstellen</string>
    <string name="course_history_fragment_create_meeting_title_hint">Termin-Titel</string>
    <string name="course_history_fragment_create_meeting_date_hint">Datum</string>
    <string name="course_history_create_meeting_create_button">Erstellen</string>
    <string name="course_history_fragment_create_meeting_time_hint">Startzeit</string>
    <string name="course_description_fragment_institution_textview">Hochschule</string>
    <string name="registration_fragment_user_name">Nutzername</string>
    <string name="dialog_delete_account_title">Account löschen</string>
    <string name="dialog_delete_account_message">Möchtest du deinen Account wirklich löschen?</string>
    <string name="dialog_delete_account_true">OK</string>
    <string name="dialog_delete_account_false">Abbrechen</string>
    <string name="dialog_password_reset_title">"Passwort zurücksetzen"</string>
    <string name="dialog_password_reset_cancel_button">"Abbrechen"</string>
    <string name="dialog_password_reset_reset_button">"Passwort zurücksetzen"</string>
    <string name="dialog_password_reset_message">Du erhältst eine Mail zum Zurücksetzen des Passworts. Bitte gib die zum Account zugehörige Email an: "</string>
    <string name="dialog_password_reset_hint">Email eingeben</string>
    <string name="dialog_impressum_title">Browser öffnen</string>
    <string name="dialog_impressum_message">Unser Impressum ist auf unserer Webseite zu lesen. Möchtest du die Anwendung dafür verlassen?</string>
    <string name="dialog_impressum_ok">OK</string>
    <string name="dialog_impressum_cancel">Abbrechen</string>
    <string name="edit_profile_name_hint">Nutzername</string>
    <string name="current_course_fragment_question_title">Dies ist ein beispielhafter Titel für eine Frage</string>
    <string name="kurs_beitreten">Kurs beitreten</string>
    <string name="kurs_erstellen">Kurs erstellen</string>
    <string name="enter_course_detail_fragment_quit_button">Abbrechen</string>
    <string name="back_to_login">Zurück zum Login</string>
    <string name="onboarding_welcome_greeting"><u>Willkommen!</u></string>
    <string name="onboarding_welcome_text_1"><b>Unser Hörsaal</b> ist dein Vorlesungsbegleiter: tausche dich mit Kommilitonen in einem pseudonymen Umfeld aus.</string>
    <string name="onboarding_welcome_text_2">Bevor es jedoch losgeht, möchten wir dir die wichtigsten Features vorstellen.</string>
    <string name="onboarding_welcome_text_3">Swipe rechts und es kann losgehen!</string>
    <string name="onboarding_course_overview_text_headline">2. Kursübersicht</string>
    <string name="onboarding_course_overview_text_1">Begleitend zu Vorlesungsmodulen kannst du in der Kursübersicht Kurse erstellen und Bestehenden beitreten.</string>
    <string name="onboarding_course_overview_text_2">Du kannst Kursen auch beitreten indem du:</string>
    <string name="onboarding_course_overview_text_3"><b>></b>  Einladungslinks klickst</string>
    <string name="onboarding_course_overview_text_4"><b>></b>  QR-Codes scannst</string>
</resources>