<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enterCourseDialogScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/enterCourseDialogOverlayLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/enterCourseDialogCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_course_fragment_course_titel"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enterCourseDialogCourseCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_course_fragment_course_creator"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/enterCourseDialogCourseInstitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_course_fragment_course_institution"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/enterCourseDialogCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/enter_course_fragment_course_description"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enterCourseDialogDeclineButton"
                style="@style/wideOrangeButton"
                android:backgroundTint="@color/red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_course_dialog_decline"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enterCourseDialogEnterCourseButton"
                style="@style/wideOrangeButton"
                android:backgroundTint="@color/green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_course_fragment_enter_button_string" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>