<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".views.EnterCourseDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/course_found_image" />

        <TextView
            android:id="@+id/enterCourseDetailFragmentCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_course_fragment_course_titel"
            android:layout_marginTop="16dp"
            style="@style/toolbarSubtitleStyle"/>

        <TextView
            android:id="@+id/enterCourseDetailFragmentCourseCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_course_fragment_course_creator"
            android:layout_marginTop="8dp"
            style="@style/toolbarSubtitleStyle"/>

        <TextView
            android:id="@+id/enterCourseDetailFragmentCourseInstitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_course_fragment_course_institution"
            android:layout_marginTop="8dp"
            style="@style/toolbarSubtitleStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterCourseDetailFragmentEnterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_course_fragment_enter_button_string"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterCourseDetailFragmentQuitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_course_detail_fragment_quit_button"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>