<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="150dp"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >

    <LinearLayout
        android:id="@+id/threadItemFeedbackContainer"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/threadItemLikesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/threadItemLikesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_item_likes_string"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/threadItemRepliesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/threadItemRepliesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thread_item_replies_string"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/threadItemSolvedIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/threadItemQuestionContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/threadItemFeedbackContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/threadItemAuthor">

        <TextView
            android:id="@+id/threadItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/app_blue"
            android:text="@string/thread_item_example_question"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/threadItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_item_example_question_description"
            android:ellipsize="end"
            android:maxLines="3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/threadItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_item_example_date"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/threadItemAuthor"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/threadItemAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_item_example_author"
        android:textColor="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>