<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_background">

                <TextView
                    android:id="@+id/onboardingCourseOverviewFragmentText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="25sp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:text="@string/onboarding_course_overview_text_headline" />

                <TextView
                    android:id="@+id/onboardingCourseOverviewFragmentText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="15sp"
                    android:text="@string/onboarding_course_overview_text_1"
                    android:layout_below="@+id/onboardingCourseOverviewFragmentText1"
                    android:layout_marginTop="10dp" />

                <ImageView
                    android:id="@+id/onboardingCourseOverviewFragmentImage"
                    android:src="@drawable/onboarding_courses_overview"
                    android:layout_below="@+id/onboardingCourseOverviewFragmentText2"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/onboardingCourseOverviewFragmentText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textStyle="bold"
                    android:textColor="@color/app_blue"
                    android:textSize="18sp"
                    android:layout_below="@+id/onboardingCourseOverviewFragmentImage"
                    android:text="@string/onboarding_course_overview_text_2"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/onboardingCourseOverviewFragmentText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="15sp"
                    android:text="@string/onboarding_course_overview_text_3"
                    android:layout_below="@+id/onboardingCourseOverviewFragmentText3"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/onboardingCourseOverviewFragmentText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="15sp"
                    android:text="@string/onboarding_course_overview_text_4"
                    android:layout_below="@+id/onboardingCourseOverviewFragmentText4"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>