<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.unserhoersaal.viewmodel.LoginViewModel"/>
        <import type="com.example.unserhoersaal.R"/>
        <import type="com.example.unserhoersaal.utils.NavUtil"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_background"
        tools:context=".views.ResetPasswordFragment">

        <TextView
            android:id="@+id/loginFragmentTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/dialog_password_reset_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/dialog_password_reset_message"
            android:layout_marginTop="32dp"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginFragmentUserEmailTextField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/dialog_password_reset_hint"
            android:layout_gravity="center"
            app:boxStrokeColor="@color/app_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginFragmentUserEmailEditText"
                android:text="@={vm.userInputState.data.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="@color/white" />

            <TextView
                android:id="@+id/resetPasswordErrorText"
                android:visibility="gone"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/resetPasswordFragmentSpinner"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordFragmentResetButton"
            android:text="@string/dialog_password_reset_reset_button"
            android:onClick="@{() -> vm.sendPasswordResetMail()}"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordFragmentCancelButton"
            android:text="@string/back_to_login"
            android:onClick="@{(view) -> NavUtil.navigate(view, R.id.action_reset_password_fragment_to_login_fragment)}"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>
</layout>