<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_background">

                <ImageView
                    android:id="@+id/onboardingWelcomeFragmentImage"
                    android:src="@drawable/onboarding_welcome"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/onboardingWelcomeFragmentWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/onboardingWelcomeFragmentImage"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="30sp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:text="@string/onboarding_welcome_greeting" />

                <TextView
                    android:id="@+id/onboardingWelcomeFragmentText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="15sp"
                    android:text="@string/onboarding_welcome_text_1"
                    android:layout_below="@+id/onboardingWelcomeFragmentWelcome"
                    android:layout_marginTop="25dp" />

                <TextView
                    android:id="@+id/onboardingWelcomeFragmentText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:textSize="15sp"
                    android:text="@string/onboarding_welcome_text_2"
                    android:layout_below="@+id/onboardingWelcomeFragmentText1"
                    android:layout_marginTop="25dp" />

                <TextView
                    android:id="@+id/onboardingWelcomeFragmentText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/app_blue"
                    android:textSize="18sp"
                    android:text="@string/onboarding_welcome_text_3"
                    android:layout_below="@+id/onboardingWelcomeFragmentText2"
                    android:layout_marginTop="35dp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>